--- a/app/src/main/res/layout/fragment_theere_bicycle.xml
+++ b/app/src/main/res/layout/fragment_theere_bicycle.xml
@@ -324,7 +324,7 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:fontFamily="@font/freemonospaced"
-                        android:text="@string/screw"
+                        android:text="@string/wint"
                         android:textColor="@color/black"
                         android:textSize="18sp"
                         android:textStyle="bold" />
