--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -77,7 +77,7 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:fontFamily="@font/freemono"
-            android:text="МЕДИКАМЕНТЫ"
+            android:text="@string/medicamenti_menu"
             android:textColor="@color/white"
             android:textSize="20sp"
             app:layout_constraintBottom_toBottomOf="@+id/buttonMedicine"
@@ -114,7 +114,7 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:fontFamily="@font/freemono"
-            android:text="ЕДА"
+            android:text="@string/eda_menu"
             android:textColor="@color/white"
             android:textSize="24sp"
             app:layout_constraintBottom_toBottomOf="@+id/buttonFood"
@@ -151,7 +151,7 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:fontFamily="@font/freemono"
-            android:text="ПЕРСОНАЖИ"
+            android:text="@string/personasi_menu"
             android:textColor="@color/white"
             android:textSize="24sp"
             app:layout_constraintBottom_toBottomOf="@+id/buttonCharacter"
@@ -189,7 +189,7 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:fontFamily="@font/freemono"
-            android:text="КОМПОНЕНТЫ"
+            android:text="@string/komponenti_menu"
             android:textColor="@color/white"
             android:textSize="24sp"
             app:layout_constraintBottom_toBottomOf="@+id/buttonComponents"
@@ -229,7 +229,7 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:fontFamily="@font/freemono"
-            android:text="ВРАГИ"
+            android:text="@string/vragi_menu"
             android:textColor="@color/white"
             android:textSize="24sp"
             app:layout_constraintBottom_toBottomOf="@+id/buttonEnemy"
@@ -269,7 +269,7 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:fontFamily="@font/freemono"
-            android:text="ОБМУНДИРОВАНИЕ"
+            android:text="@string/obmundirovanie_menu"
             android:textColor="@color/white"
             android:textSize="18sp"
             app:layout_constraintBottom_toBottomOf="@+id/buttonEquipment"
@@ -306,7 +306,7 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:fontFamily="@font/freemono"
-            android:text="ОРУЖИЕ"
+            android:text="@string/oruzie_menu"
             android:textColor="@color/white"
             android:textSize="24sp"
             app:layout_constraintBottom_toBottomOf="@+id/buttonWeapon"
@@ -343,7 +343,7 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:fontFamily="@font/freemono"
-            android:text="ТРАНСПОРТ"
+            android:text="@string/transport_menu"
             android:textColor="@color/white"
             android:textSize="20sp"
             app:layout_constraintBottom_toBottomOf="@+id/buttonTransport"
@@ -380,7 +380,7 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:fontFamily="@font/freemono"
-            android:text="ВЫЖИВАНИЕ"
+            android:text="@string/vizivanie_menu"
             android:textColor="@color/white"
             android:textSize="20sp"
             app:layout_constraintBottom_toBottomOf="@+id/buttonSurvival"
@@ -424,7 +424,7 @@
             android:layout_width="193dp"
             android:layout_height="27dp"
             android:fontFamily="@font/freemono"
-            android:text="НАСТРОЙКИ"
+            android:text="@string/nastroiki_menu"
             android:textColor="@color/white"
             android:textSize="32sp"
             app:layout_constraintBottom_toBottomOf="@+id/buttonSettings"
