--- a/app/src/main/res/layout/transport_item.xml
+++ b/app/src/main/res/layout/transport_item.xml
@@ -11,6 +11,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
+        app:cardBackgroundColor="@color/material_on_primary_disabled"
         app:cardCornerRadius="5dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
